@@ -622,9 +622,9 @@ GameActions::Result TrackPlaceAction::Execute() const
         }
 
         // If the placed tile is a station modify station properties.
-        // Don't do this if the ride is simulating and the tile is a ghost to prevent desyncs.
-        if (entranceDirections & TRACK_SEQUENCE_FLAG_ORIGIN
-            && !(ride->status == RideStatus::Simulating && GetFlags() & GAME_COMMAND_FLAG_GHOST))
+        // Don't do this if the tile is a ghost to prevent desyncs
+        // However, ghost tiles from track designs need to modify station data to display properly
+        if (entranceDirections & TRACK_SEQUENCE_FLAG_ORIGIN && (!(GetFlags() & GAME_COMMAND_FLAG_GHOST) || _fromTrackDesign))
         {
             if (trackBlock->index == 0)
             {
